US5761 - TA14857 : TA14858 - Transfer Money select account. Implemented the select account feature. Implemented the internal and external account lists that a user can select from. Implemented the feature that prevents them from selecting the same account twice. If only two accounts exist it will automatically select the pair of accounts. It also notifies the user that they cannot transfer between two external accounts and gives them a special navigation option to change this. This commit includes the service calls for getting the external payees and submitting the transfer.

--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -57,6 +57,7 @@
 
 	<string name="are_you_sure_title">Are You Sure You Want to Go Back?</string>
 	<string name="account_ending_in">Account ending in</string>
+	<string name="account_ending_in_first_two_caps">Account Ending in</string>
 	
 	<string name="sending_deposit_title_text">Sending Deposit</string>
 	<string name="sending_deposit_detail_text">Your deposit is being sent securely to the bank. Please wait for the transaction to be completed.</string>
