--- a/Discover-Commons/res/anim/fragment_slide_out_left.xml
+++ b/Discover-Commons/res/anim/fragment_slide_out_left.xml
@@ -2,9 +2,10 @@
     android:shareInterpolator="false" >
 
     <translate
-        android:duration="400"
+        android:duration="250"
         android:fromXDelta="0%"
         android:fromYDelta="0%"
+        android:interpolator="@android:anim/decelerate_interpolator"
         android:toXDelta="-100%"
         android:toYDelta="0%" />
 
