--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -39,8 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/divider_line2"
         android:orientation="horizontal"
+        android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/between_related_elements_padding"
         android:paddingRight="@dimen/forms_inner_padding"
+        android:paddingTop="@dimen/forms_inner_padding"
         android:weightSum="5" >
 
         <RadioButton
@@ -49,7 +51,8 @@
             android:layout_height="fill_parent"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_weight=".65"
-            android:checked="true" />
+            android:checked="true"
+            android:clickable="false" />
 
         <TextView
             android:id="@+id/canceled_label"
@@ -59,8 +62,8 @@
             android:layout_weight="4"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textColor="@color/body_copy"
-            android:text="@string/transfer_cancelled" />
+            android:text="@string/transfer_cancelled"
+            android:textColor="@color/body_copy" />
     </LinearLayout>
 
     <!-- End of cancelled layout items -->
@@ -105,6 +108,7 @@
                 style="@style/field_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="false"
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="@string/transfer_date" />
@@ -122,15 +126,14 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/caret"
+            android:id="@+id/freq_caret"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight=".5"
             android:contentDescription="@string/caret_description"
-            android:paddingRight="@dimen/between_related_elements_padding"
             android:paddingBottom="@dimen/between_related_elements_padding"
+            android:paddingRight="@dimen/between_related_elements_padding"
             android:scaleType="center"
-            android:alpha=".3"
             android:src="@drawable/blue_arrow_right" />
     </LinearLayout>
     <!-- End date layout items -->
@@ -161,7 +164,8 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_weight=".5" />
+            android:layout_weight=".5"
+            android:clickable="false" />
 
         <TextView
             android:id="@+id/transactions_label"
@@ -210,7 +214,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_weight=".5" />
+            android:layout_weight=".5"
+            android:clickable="false" />
 
         <TextView
             android:id="@+id/dollar_label"
