--- a/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
@@ -154,10 +154,11 @@
             android:id="@+id/street_view"
             android:layout_width="30dp"
             android:layout_height="20dp"
+            android:minHeight="30dp"
             android:layout_above="@+id/report"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:background="@drawable/atm_street_view_icon_sm" />
 
         <Button
