US5758: Added show hide functionality and fixed a crash.

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -25,7 +25,7 @@
     </string-array>
     
     <string-array name="transfer_frequency_codes">
-        <item>one_time</item>
+        <item>one_time_transfer</item>
         <item>weekly</item>
         <item>every_two_weeks</item>
         <item>monthly</item>
