DE3968: ATM Locator - squished eyeball in list view

--- a/Discover-Bank-Phone/res/layout-land/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_detail_item.xml
@@ -77,7 +77,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/field_stroke"
-        android:visibility="visible" >
+        android:visibility="visible" 
+        android:paddingTop="@dimen/forms_inner_padding">
 
         <TextView
             android:id="@+id/hours_label"
