--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -31,9 +31,9 @@
 	<string name="bank_cancel_msg">Are you sure you want to cancel? All information you have entered will be lost.</string>
 	<string name="bank_cancel_yesaction">Yes</string>
 	<string name="bank_cancel_noaction">Cancel</string>
-	<string name="bank_add_confirm">The new payee has been setup. You may now schedule a payment.</string>
+	<string name="bank_add_confirm">The new payee has been set up. You may now schedule a payment.</string>
 	<string name="bank_sch_payment">Schedule a Payment</string>
-	<string name="bank_add_another">Add Payee</string>
+	<string name="bank_add_another">Add Another Payee</string>
 	<string name="bank_dollar_sign">$</string>
 	<string name="bank_deposit_amount">Deposit Amount</string>
 	<string name="bank_payee_empty">You currently have no payees set up.</string>
@@ -58,7 +58,7 @@
 	<string name="bank_payee_memo">Account # / Memo (Optional)</string>
 	
 	<!-- Add Unmanaged Payee Error Strings -->
-	<string name="bank_invalid_phone_number">Invalid phone numbers</string>
+	<string name="bank_invalid_phone_number">Invalid phone number</string>
 	
 	<!-- Edit Payee -->
 	<string name="bank_save_payee">Save</string>
